sign up_non decorate

--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
 				<span>Login</span>
 			</button>
 			<div id="sign_up">
-				<a href="">click here</a> to join us!
+				<a href="sign up.html">click here</a> to join us!
 			</div>
 		</div>
 	</div>
