--- a/sign up.html
+++ b/sign up.html
@@ -12,45 +12,49 @@
 		<img src="test.jpeg">
 	</div>
 	<div id='header_message'>
-		Welcome,guest
+		欢迎，游客
 	</div>
 </header>
 <section>
 	<div class="field_divide"></div>
 	<div id="body_register">
-		<div class="field_divide"></div>
 		<div id="body_title">
-			finish essential information to join us
+			注册：填写下列信息
 		</div>
 		<ul>
 			<li>
-				<label>Your phone number:</label>
+				<label>手机号:</label>
 				<br>
-				<input type="text" name="phone_number" id="reg_phone" class="input_area">
+				<input type="text" name='phone_number' id="reg_phone" class="input_area"/>
 				<button id="get_code" type="Submit" onclick="sendCode()">code</button>
 			</li>
 			<li>
-				<label>Verification code:</label>
+				<label>验证码:</label>
 				<br>
 				<input type="text" name="veri_code" id="reg_vr_code" class="input_area">
 			</li>
 			<li>
-				<label>Choose a user name:</label>
+				<label>输入您的教工号:</label>
+				<br>
+				<input type="text" name="user_id" id="reg_id" class="input_area">
+			</li>
+			<li>
+				<label>选择一个用户名:</label>
 				<br>
 				<input type="text" name="user_name" id="reg_name" class="input_area">
 			</li>
 			<li>
-				<label>Your Password:</label>
+				<label>密码:</label>
 				<br>
 				<input type="password" name="password" id="reg_pwd" class="input_area">
 			</li>
 			<li>
-				<label>Confirm password:</label>
+				<label>确认密码:</label>
 				<br>
-				<input type="password" name="phone_number" id="reg_pwd_2" class="input_area">
+				<input type="password" name="password_2" id="reg_pwd_2" class="input_area">
 			</li>
 		</ul>
-		<div id='error_box'>input correct word!</div>
+		<div id='error_box'> </div>
 		<button id="submit_form" type="Submit" onclick="subForm()">Submit</button>
 	</div>
 </section>
