--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 		<img src="test.jpeg">
 	</div>
 	<div id='header_message'>
-		Welcome,guest
+		欢迎，游客
 	</div>
 </header>
 <section>
@@ -24,17 +24,17 @@
 	<div id="login_field">
 		<div class="field_divide"></div>
 		<div id="body_title">
-		login or join us
+		登陆或注册
 		</div>
 		<div id="field_input">
 		<ul>
 			<li>
-				<label>User Name:</label>
+				<label>用户名:</label>
 				<br>
 				<input type="text" title="User name" class="input_area" name="login_name" id="login_name">
 			</li>
 			<li>
-				<label>Password:</label>
+				<label>密码:</label>
 				<br>
 				<input type="password" title="Password" class="input_area" name="login_pwd" id="login_pwd">
 			</li>
@@ -44,8 +44,9 @@
 			<button id="submit_login" name="login_send" type="submit" onclick='js_login()'>
 				<span>Login</span>
 			</button>
+			<div id='error_box'> </div>
 			<div id="sign_up">
-				<a href="sign up.html">click here</a> to join us!
+				<a href="sign up.html">点击</a>来注册！
 			</div>
 		</div>
 	</div>
