--- a/view.html
+++ b/view.html
@@ -1,3 +1,4 @@
+<meta charset="utf-8">
 <!DOCTYPE html>
 <html>
 <head>
@@ -22,13 +23,13 @@
             </div>
             <div id="info_list">
                 <ul>
-                    <li>
+                    <li id="info_list_name">
                         姓名：
                     </li>
-                    <li>
+                    <li id="info_list_id">
                         工号：
                     </li>
-                    <li>
+                    <li id="info_list_tel">
                         联系电话：
                     </li>
                 </ul>
@@ -36,7 +37,7 @@
         </div>
         <div id='course_title'>
             以下为您创建的课程：
-            <button id='new_course' onclick="window.location.assign('add_course.html')">new</button>
+            <button id='new_course' onclick="jump_add_course()">new</button>
         </div>
         <div id='course_table'>
             <div id="table_top_guide" class="table_line">
@@ -44,7 +45,9 @@
                     <div id="table_guide_id" class="table_id">课程ID</div>
                     <div id="table_guide_user" class="table_user">创建用户</div>
                     <div id="table_guide_time" class="table_time">课程时间</div>
+                    <div id='table_guide_status' class='table_status'>状态</div>
                     <div id="table_guide_button" class="table_button">操作</div>
+
                 </div>
         </div>
 	</section>
@@ -180,7 +183,7 @@ footer{
         padding-bottom: 5px;
         position: relative;
         float: left;
-        width: 20%;
+        width: 15%;
 
         margin-top: 5px;
         margin-bottom: 5px;
@@ -204,7 +207,7 @@ footer{
 
     .table_user{
         float: left;
-        width: 20%;
+        width: 15%;
         padding-top: 5px;
         padding-bottom: 5px;
 
@@ -214,7 +217,18 @@ footer{
 
     .table_time{
         float: left;
-        width: 20%;
+        width: 15%;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        background-color: #999999;
+        color: #dddddd;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+
+    .table_status{
+        float: left;
+        width: 15%;
         padding-top: 5px;
         padding-bottom: 5px;
         background-color: #999999;
@@ -255,62 +269,89 @@ footer{
     var idList=new Array();
     var userList=new Array();
     var timeList=new Array();
-
+    var statusList=new Array();
     var login_id;
     var login_name;
 
 $(document).ready(function(){
+    var a=GetRequest();
+    login_id=a.id;
+    login_name=unescape(a.name);
     // $.ajax({
-    //     url:'http://101.200.61.252:8080/',       //undefined
+    //     url:'http://101.200.61.252:8080/user/login',       //undefined
     //     dataType:'json',
     //     cache:false,
     //     data:null,
     //     type:'POST',
     //     success:function(data){
+    //         alert(data);
     //         login_id=data.identify;
     //         login_name=data.name;
+    //     },
+    //     error:function(){
+    //         alert('123');
     //     }
-
     // });
+    alert(login_id+login_name);
     initData();
     initPage();
 });
     
+function GetRequest() { 
+    var url = location.search; //获取url中"?"符后的字串 
+    var theRequest = new Object(); 
+    if (url.indexOf("?") != -1) { 
+        var str = url.substr(1); 
+        strs = str.split("&"); 
+        for(var i = 0; i < strs.length; i ++) { 
+            theRequest[strs[i].split("=")[0]]=unescape(strs[i].split("=")[1]); 
+        } 
+    } 
+    return theRequest; 
+} 
 //init data
 function initData(){
-    for(var i=0;i<15;i++){
-        courseList[i]=i;
-        idList[i]=i*200;
-        userList[i]=i+10083;
-        timeList[i]=new Date();
-    }
-    // $.ajax({
-    //     url:'http://101.200.61.252:8080/',       //undefined
-    //     dataType:'json',
-    //     cache:false,
-    //     data:'identify='+user_id+'&password='+user_pwd,
-    //     type:'POST',
-    //     success:function(data){
-    //         for (var i = 0; i < data.length; i++) {
-    //             data[i];
-    //         }
-    //     }
+    // for(var i=0;i<15;i++){
+    //     courseList[i]=i;
+    //     idList[i]=i*200;
+    //     userList[i]=i+10083;
+    //     timeList[i]=new Date();
+    // }
+    $.ajax({
+        url:'http://101.200.61.252:8080/teacher/courselist',       //untested
+        dataType:'json',
+        cache:false,
+        data:'identify='+login_id,
+        type:'POST',
+        success:function(data){
+            for (var i = 0; i < data.length; i++) {
+                courseList[i]=data[i].courseName;
+                idList[i]=data[i].id;
+                userList[i]=login_id;
+                timeList[i]=data[i].time_list[0];
+                statusList[i]=data[i].status;
+            }
+        }
 
-    // });
+    });
 }
 
 
 //end init
 
 function initPage(){
+    $("#header_message").html("欢迎，"+login_name);
+    $("#info_list_name").html("姓名："+login_name);
+    $("#info_list_id").html("工号："+login_id);
+
     for (var i = 0; i < courseList.length; i++) {
-        $("#course_table").append(createDiv(courseList[i],idList[i],userList[i],timeList[i]));
+        $("#course_table").append(createDiv(courseList[i],idList[i],userList[i],timeList[i],statusList[i]));
     }
 }
 
 
 
-function createDiv(name,id,user,time){
+function createDiv(name,id,user,time,status){
     var temp=$("<div></div>");
     temp.attr("id",name+"_course");
     temp.attr("class",'table_line');
@@ -331,6 +372,11 @@ function createDiv(name,id,user,time){
     c_time.html(time.toLocaleTimeString());
     c_time.attr("class","table_time");
 
+    var c_status=$("<div></div>");
+    c_status.html(status);
+    c_status.attr('class','table_status');
+
+
     var c_button=$("<div></div>");
     c_button.html("<button onclick='delCourse("+id+")'>delete</button> <button onclick='courseDetail("+id+"'>detail</button>");
     c_button.attr('class','table_button');
@@ -340,11 +386,14 @@ function createDiv(name,id,user,time){
     $(temp).append(c_id);
     $(temp).append(c_user);
     $(temp).append(c_time);
+    $(temp).append(c_status);
     $(temp).append(c_button);
 
     return temp;
 }
-
+function jump_add_course(){
+    window.location.assign("Add course.html?id="+login_id+'&name='+escape(login_name));
+}
 function delCourse(id){
     $.ajax({
         url:'http://101.200.61.252:8080/teacher/cancel',       //not tested
