--- a/Add course.html
+++ b/Add course.html
@@ -1,3 +1,4 @@
+<meta charset="utf-8">
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,7 +13,7 @@
 		<img src="test.jpeg">
 	</div>
 	<div id='header_message'>
-		Welcome,guest
+		欢迎，游客
 	</div>
 </header>
 <section>
@@ -20,26 +21,80 @@
 	<div id="body_register">
 		<div class="field_divide"></div>
 		<div id="body_title">
-			add course
+			添加课程
 		</div>
 		<ul>
 			<li>
-				<label>Course name:</label>
+				<label>课程名：</label>
 				<br>
-				<input type="text" name="phone_number" id="course_name" class="input_area">
+				<input type="text" name="course_name" id="course_name" class="input_area">
 			</li>
 			<li>
-				<label>Course time:</label>
+				<label>课程时间：</label>
 				<br>
-				<input type="text" name="veri_code" id="course_t" class="input_area">
+				<br>
+				<label>首选时间：</label>
+				<div if='form_area_1'>
+				<form id='weekdays_form'>
+					<select name="weekdays">
+						<option value=1>周一</option>
+						<option value=2>周二</option>
+						<option value=3>周三</option>
+						<option value=4>周四</option>
+						<option value=5>周五</option>
+						<option value=6>周六</option>
+						<option value=7>周日</option>
+					</select>
+				</form>
+				<form id='time_form'>
+					<select name="time">
+						<option value=1>8:00-9:40</option>
+						<option value=2>10:00-11:40</option>
+						<option value=3>13:30-15:05</option>
+						<option value=4>15:25-17:00</option>
+						<option value=5>18:30-20:10</option>
+					</select>
+				</form>
+				<br>
+				</div>
+				<label>次选时间：</label>
+				<div if='form_area_1'>
+				<form id='weekdays_form'>
+					<select name="weekdays_2">
+						<option value=0>无</option>
+						<option value=1>周一</option>
+						<option value=2>周二</option>
+						<option value=3>周三</option>
+						<option value=4>周四</option>
+						<option value=5>周五</option>
+						<option value=6>周六</option>
+						<option value=7>周日</option>
+					</select>
+				</form>
+				<form id='time_form'>
+					<select name="time_2">
+						<option value=0>无</option>
+						<option value=1>8:00-9:40</option>
+						<option value=2>10:00-11:40</option>
+						<option value=3>13:30-15:05</option>
+						<option value=4>15:25-17:00</option>
+						<option value=5>18:30-20:10</option>
+					</select>
+				</form>
+				<br>
+				</div>
 			</li>
 			<li>
-				<label>Course describe:</label>
+				<label>课程图片：</label>
+				<input type="file" name="upload">
+			</li>
+			<li>
+				<label>课程描述：</label>
 				<br>
-				<textarea type="text" name="user_name" id="course_desc" class="input_area"></textarea>
+				<textarea type="text" name="course_desc" id="course_desc" class="input_area"></textarea>
 			</li>
 		</ul>
-		<div id='error_box'>input correct word!</div>
+		<div id='error_box'></div>
 		<button id="submit_form" type="Submit" onclick="subForm()">Submit</button>
 	</div>
 </section>
@@ -162,6 +217,25 @@ button:hover{
 	border: 2px solid #fff;
 }
 
+form{
+	width: 50%;
+	margin-right: 0;
+	float: left;
+}
+
+#weekdays_form{
+	width: 20%;
+}
+#time_form{
+	width: 80%;
+}
+select{
+	width: 80%;
+}
+
+#time_form select{
+	width: 20%;
+}
 
 #get_code{
 	width: 8%;
@@ -178,6 +252,58 @@ button:hover{
 </style>
 
 <script type="text/javascript">
-	function 
+	var login_id;
+	var login_name;
+	$(document).ready(function(){
+		login_id=GetRequest().id;
+		login_name=unescape(GetRequest().name);
+		$("#header_message").html("欢迎，"+login_name);
+	});
+
+	function subForm(){
+		var time=new Array();
+		var temp=parseInt($("select[name='weekdays']").val())*10+parseInt($("select[name='time']").val());
+		time.push(temp);
+		if($("select[name='weekdays_2']").val()!=0){
+			var temp=parseInt($("select[name='weekdays_2']").val())*10+parseInt($("select[name='time_2']").val());
+			time.push(temp);
+		}
+		var a={
+				"name":$("input[name='course_name']").val(),
+				"image":$("input[name='upload']").val(),
+				"teacher_id":login_id,
+				"describe":$("textarea[name='course_desc']").val(),
+				"time_id":time
+			};
+		alert(a.image+'\n'+a.describe+'\n'+a.time_id);
+		$.ajax({
+			url:'http://101.200.61.252:8080/teacher/insertcourse',
+			dataType:'json',
+			cache:false,
+			traditional:true,
+			data:a,
+			type:'POST',
+			success:function(data){
+				alert(data.status);
+			},
+			error:function(){
+				alert('error');
+			}
+
+		});
+	}
+
+	function GetRequest() { 
+    var url = location.search; //获取url中"?"符后的字串 
+    var theRequest = new Object(); 
+    if (url.indexOf("?") != -1) { 
+        var str = url.substr(1); 
+        strs = str.split("&"); 
+        for(var i = 0; i < strs.length; i ++) { 
+            theRequest[strs[i].split("=")[0]]=unescape(strs[i].split("=")[1]); 
+        } 
+    } 
+    return theRequest; 
+} 
 </script>
 </html>
