--- a/Add course.html
+++ b/Add course.html
@@ -3,9 +3,9 @@
 <html>
 <head>
 	<title>Add Course</title>
-	<link rel="stylesheet" type="text/css" href="add_course.css">
-	<script type="text/javascript" src='jquery.js'></script>
-	<script type="text/javascript" src='add_course.js'></script>
+	<link rel="stylesheet" type="text/css" href="css/add_course.css">
+	<script type="text/javascript" src='js/jquery.js'></script>
+	<script type="text/javascript" src='js/add_course.js'></script>
 </head>
 <body>
 <header>
@@ -103,211 +103,4 @@
 </footer>
 </body>
 
-<style type="text/css">
-	body{
-	margin:0;
-	padding-left: 5%;
-	padding-right: 5%;
-	padding-top: 2%;
-	background-color: rgba(240,242,243,0.8);
-	font-family: 'open sans';
-	color: gray;
-}
-
-header{
-	height: 10%;
-	position: absolute;
-	top:2%;
-	width: 90%;
-	/*background-color: white;*/
-}
-#logo{
-	position: relative;
-	height: 100%;
-	width: 30%;
-	overflow: hidden;
-	float: left;
-
-}
-
-#logo img{
-	width: 100%;
-}
-
-#header_message{
-	position: relative;
-	float: right;
-	top: 40%;
-}
-
-section{
-	position:absolute;
-	top: 15%;
-	height: 800px;
-	width: 90%;
-	background-color: white;
-}
-
-.field_divide{
-	height: 10%;
-}
-
-#body_register{
-	width: 80%;
-	height: 80%;
-	background-color: rgba(240,242,243,0.8);
-	margin-left: 10%;
-	box-shadow: 5px 5px 5px gray;
-}
-
-#body_title{
-	margin-left: 5%;
-	font-size: 18px;
-	text-transform: uppercase;
-	font-weight: normal;
-	font-family: 'open sans';
-}
-
-#body_register ul{
-	width: 90%;
-	margin-left: 5%;
-	list-style: none;
-	padding: 0;
-	font-family: 'open sans';
-	font-size: 13px;
-}
-.input_area {
-    background: #fff;
-    border: 1px solid #ddd;
-    padding: 5px 2% 5px 2%;
-    width: 35%;
-    outline: none;
-    border-radius: 10px;
-    margin-right: 10%;
-    font-size: 100%;
-    margin-bottom: 15px;
-}
-
-#course_desc{
-	width: 50%;
-	height: 300px;
-	resize: none;
-}
-#error_box{
-	height: 5%;
-	width: 90%;
-	margin-left: 5%;
-	color: red;
-	font-family: 'open sans';
-}
-
-button {
-    font-family: 'Open Sans', sans-serif;
-    border: 2px solid #000;
-    background: #fff;
-    padding: 10px 12px;
-    transition: color 300ms ease-in-out 0s,
-    			background-color 300ms ease-in-out 0s, 
-    			background-position 300ms ease-in-out 0s;
-}
-
-button:hover{
-	background-color: #000;
-	color: #fff;
-	border: 2px solid #fff;
-}
-
-form{
-	width: 50%;
-	margin-right: 0;
-	float: left;
-}
-
-#weekdays_form{
-	width: 20%;
-}
-#time_form{
-	width: 80%;
-}
-select{
-	width: 80%;
-}
-
-#time_form select{
-	width: 20%;
-}
-
-#get_code{
-	width: 8%;
-	padding: 0;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-align: center;
-}
-
-#submit_form{
-	margin-left: 5%;
-}
-
-</style>
-
-<script type="text/javascript">
-	var login_id;
-	var login_name;
-	$(document).ready(function(){
-		login_id=GetRequest().id;
-		login_name=unescape(GetRequest().name);
-		$("#header_message").html("欢迎，"+login_name);
-	});
-
-	function subForm(){
-		var time=new Array();
-		var temp=(parseInt($("select[name='weekdays']").val())-1)*5+parseInt($("select[name='time']").val());
-		time.push(temp);
-		if($("select[name='weekdays_2']").val()!=0){
-			var temp=(parseInt($("select[name='weekdays_2']").val())-1)*5+parseInt($("select[name='time_2']").val());
-			time.push(temp);
-		}
-		var a=new FormData();
-				a.append("name",$("input[name='course_name']").val());
-				a.append("image",$("#upload")[0].files[0]);
-				a.append("teacher_id",login_id);
-				a.append("describe",$("textarea[name='course_desc']").val());
-				a.append("time_id",time);
-			
-		alert(a.image+'\n'+a.describe+'\n'+a.time_id);
-		$.ajax({
-			url:'http://101.200.61.252:8080/teacher/insertcourse',
-			dataType:'json',
-			cache:false,
-			traditional:true,
-			data:a,
-			type:'POST',
-			processData: false,
-        	contentType: false,
-			success:function(data){
-				alert('success!');
-				setTimeout(window.location.assign('view.html?id='+login_id+'&name='+escape(login_name)),500);
-
-			},
-			error:function(){
-				alert('error');
-			}
-
-		});
-	}
-
-	function GetRequest() { 
-    var url = location.search; //获取url中"?"符后的字串 
-    var theRequest = new Object(); 
-    if (url.indexOf("?") != -1) { 
-        var str = url.substr(1); 
-        strs = str.split("&"); 
-        for(var i = 0; i < strs.length; i ++) { 
-            theRequest[strs[i].split("=")[0]]=unescape(strs[i].split("=")[1]); 
-        } 
-    } 
-    return theRequest; 
-} 
-</script>
 </html>
