--- a/login.html
+++ b/login.html
@@ -3,9 +3,9 @@
 <html>
 <head>
 	<title>Login</title>
-	<link rel="stylesheet" type="text/css" href="login.css">
-	<script type="text/javascript" src='jquery.js'></script>
-	<script type="text/javascript" src='login.js'></script>
+	<link rel="stylesheet" type="text/css" href="css/login.css">
+	<script type="text/javascript" src='js/jquery.js'></script>
+	<script type="text/javascript" src='js/login.js'></script>
 </head>
 <body>
 <header>
@@ -47,7 +47,8 @@
 			</button>
 			<div id='error_box'> </div>
 			<div id="sign_up">
-				<a href="sign up.html">点击</a>来注册！
+				<a href="sign up.html">点击</a>来注册！<br><br>
+				<a href="pwd_forgot.html">忘记密码
 			</div>
 		</div>
 	</div>
