--- a/pwd_forgot.html
+++ b/pwd_forgot.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>Sign up</title>
-	<link rel="stylesheet" type="text/css" href="sign_up.css">
-	<script type="text/javascript" src='jquery.js'></script>
-	<script type="text/javascript" src='sign_up.js'></script>
+	<link rel="stylesheet" type="text/css" href="css/pwd_forgot.css">
+	<script type="text/javascript" src='js/jquery.js'></script>
+	<script type="text/javascript" src='js/pwd_forgot.js'></script>
 </head>
 <body>
 <header>
@@ -58,199 +58,4 @@
 	©woo 2016
 </footer>
 </body>
-<style type="text/css">
-	body{
-	margin:0;
-	padding-left: 5%;
-	padding-right: 5%;
-	padding-top: 2%;
-	background-color: rgba(240,242,243,0.8);
-	font-family: 'open sans';
-	color: gray;
-}
-
-header{
-	height: 10%;
-	position: absolute;
-	top:2%;
-	width: 90%;
-	/*background-color: white;*/
-}
-#logo{
-	position: relative;
-	height: 100%;
-	width: 30%;
-	overflow: hidden;
-	float: left;
-
-}
-
-#logo img{
-	width: 100%;
-}
-
-#header_message{
-	position: relative;
-	float: right;
-	top: 40%;
-}
-
-section{
-	position:absolute;
-	top: 15%;
-	width: 90%;
-	background-color: white;
-}
-
-.field_divide{
-	height: 50px;
-}
-
-#body_register{
-	width: 80%;
-	height: 450px;
-	background-color: rgba(240,242,243,0.8);
-	margin-left: 10%;
-	box-shadow: 5px 5px 5px gray;
-}
-
-#body_title{
-	margin-left: 5%;
-	font-size: 18px;
-	text-transform: uppercase;
-	font-weight: normal;
-	font-family: 'open sans';
-	padding-top: 30px;
-}
-
-#body_register ul{
-	width: 90%;
-	margin-left: 5%;
-	list-style: none;
-	padding: 0;
-	font-family: 'open sans';
-	font-size: 13px;
-}
-.input_area {
-    background: #fff;
-    border: 1px solid #ddd;
-    padding: 5px 2% 5px 2%;
-    width: 35%;
-    outline: none;
-    border-radius: 10px;
-    margin-right: 10%;
-    font-size: 100%;
-    margin-bottom: 15px;
-}
-
-#error_box{
-	height: 5%;
-	width: 90%;
-	margin-left: 5%;
-	color: red;
-	font-family: 'open sans';
-}
-
-button {
-    font-family: 'Open Sans', sans-serif;
-    border: 2px solid #000;
-    background: #fff;
-    padding: 10px 12px;
-    transition: color 300ms ease-in-out 0s,
-    			background-color 300ms ease-in-out 0s, 
-    			background-position 300ms ease-in-out 0s;
-}
-
-button:hover{
-	background-color: #000;
-	color: #fff;
-	border: 2px solid #fff;
-}
-
-#reg_phone{
-	width: 27%;
-	margin-right: 0;
-}
-
-#get_code{
-	width: 8%;
-	padding: 0;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-align: center;
-}
-
-#submit_form{
-	margin-left: 5%;
-}
-
-footer{
-	position: absolute;
-	bottom: 2%;
-	text-align: center;
-	width: 90%;
-	color:#cccccc;
-	font-weight: 200;
-}
-</style>
-
-<script type="text/javascript">
-	
-function sendCode(){
-	var phoneNum;
-	phoneNum=$("input[name='phone_number']").val();
-	$.ajax({
-	url:'http://101.200.61.252:8080/user/getvertifycode',
-	dataType:'json',
-	cache:false,
-	data:'phoneNum='+phoneNum,
-	type:'POST',
-	success:function(){
-
-	}
-});
-}
-
-function subForm(){
-	$("#error_box").html("");
-	var temp=checkCode();
-	if(!temp)
-		return;
-	var id=$("input[name='user_id']").val();
-	var pwd=$("input[name='password']").val();
-	var phone=$("input[name='phone_number']").val();
-	var code=$("input[name='veri_code']").val();
-	var json='identify='+id+'&phone_number='+phone+'&new_password='+pwd+'&verify_code='+code;
-	//alert(json);
-	$.ajax({
-		url:'http://101.200.61.252:8080/user/forget_password',
-		dataType:'json',
-		cache:false,
-		data:json,
-		type:'POST',
-		success:function(status){
-			if(status==0){
-				alert('修改成功！');
-				setTimeout("window.location.assign('login.html')",1000);
-			}else{
-				$("#error_box").html('填写错误！');
-			}
-		}
-	});
-}
-
-function checkCode(){
-	var pwd_1;
-	var pwd_2;
-	pwd_1=$("input[name='password']").val();
-	pwd_2=$("input[name='password_2']").val();
-	if(pwd_1==pwd_2){
-		return true;
-	}
-	else{
-		$("#error_box").html('请再次确认密码！');
-		return false;
-	}
-}
-</script>
 </html>
