--- a/sign_up.html
+++ b/sign_up.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>Sign up</title>
-	<link rel="stylesheet" type="text/css" href="sign_up.css">
-	<script type="text/javascript" src='jquery.js'></script>
-	<script type="text/javascript" src='sign_up.js'></script>
+	<link rel="stylesheet" type="text/css" href="css/sign_up.css">
+	<script type="text/javascript" src='js/jquery.js'></script>
+	<script type="text/javascript" src='js/sign_up.js'></script>
 </head>
 <body>
 <header>
