--- a/course.html
+++ b/course.html
@@ -200,7 +200,7 @@
             <div class="col-sm-4">
                 <div class="text-center">
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal" style="margin-left:150%" onclick="goadd();">
-                        添加课程
+                        添加实验
                     </button>
                 </div>
             </div>
